add following feature
add following feature including overview who you follow and who is following you on users/show + follow link on users/index

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,3 +4,4 @@
     %li
       = link_to user.username, user
       signed up #{user.created_at.to_date}
+      = link_to "Add Friend", followings_path(:follower_id => user), :method => :post
