--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,3 +3,18 @@
   User: #{@user.username}
 %p
   Email: #{@user.email}
+
+%h3 Follows
+
+%ul
+  - for user in @user.followed_users
+    %li
+      = h user.username
+      (#{link_to "unfollow", followings_path, :method => :delete})
+
+%p= link_to "Find Friends", users_path
+
+%h3 Follower
+%ul
+  - for user in @user.followers
+    %li= h user.username
