--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,17 +12,13 @@
  *= require foundation_and_overrides
  *= require_tree .
 */
-.brand {
-  float: left;
-  padding-right: 8px;
-}
-ul.nav {
-  list-style: none;
-  margin: 0 0 2em;
-  padding: 0;
-}
-ul.nav li {
-  display: inline;
+@import 'options';
+
+#container {
+  max-width: 1000px;
+  margin: 0 auto;
+  box-shadow: 0 0 4px $grey;
+  border-radius: 0px 0px 7px 7px;
 }
 #flash_notice, #flash_alert {
   padding: 5px 8px;
@@ -35,4 +31,30 @@ ul.nav li {
 #flash_alert {
   background-color: #FCC;
   border: solid 1px #C66;
+}
+header {
+  text-align: center;
+  .brand {
+    background: $yellow;
+    padding: 1em;
+    a {
+      color: $black;
+    }
+  }
+}
+navigation {
+  ul.nav-bar {
+    margin-top: 0;
+  }
+}
+section {
+  padding: 1em;
+}
+footer {
+  text-align: center;
+  p {
+    font-size: 0.75em;
+    margin-bottom: 0;
+    margin-top: 0.75em;
+  }
 }
