--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,4 +1,6 @@
 .row
   - flash.each do |name, msg|
     - if msg.is_a?(String)
-      = content_tag :div, msg, :id => "flash_#{name}"
+      %div{:class => "alert-box #{name}"}
+        = msg
+        %a.close{:href => ""} &times;
