add link to new post in navigation bar

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,6 +4,8 @@
       = link_to 'Home', root_url
     - if user_signed_in?
       %li
+        = link_to 'New post', new_post_path
+      %li
         = link_to current_user.username, current_user
       %li
         = link_to 'Edit account', edit_user_registration_path
