--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
       %li
         = link_to current_user.username, current_user
       %li
-        = link_to 'Edit account', edit_user_registration_path
+        = link_to 'Edit profile', edit_user_registration_path
       %li
         = link_to 'Logout', destroy_user_session_path, :method=>'delete'
     - else
