--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,25 +1,27 @@
-%h2 User
-%p
-  User: #{@user.username}
-%p
-  Email: #{@user.email}
+.six.columns
+  %h2 User
+  %p
+    User: #{@user.username}
+  %p
+    Email: #{@user.email}
 
-%h2 Follows
-%ul
-  - for following in @user.followings
-    %li
-      = h following.follower.username
-      = link_to "unfollow", following_path(:id => following.id), :method => :delete
+  %h2 Follows
+  %ul
+    - for following in @user.followings
+      %li
+        = h following.follower.username
+        = link_to "unfollow", following_path(:id => following.id), :method => :delete
 
-%h2= link_to "Find Friends", users_path
+  %h2= link_to "Find Friends", users_path
 
-%h2 Follower
-%ul
-  - for user in @user.followers
-    %li= h user.username
+  %h2 Follower
+  %ul
+    - for user in @user.followers
+      %li= h user.username
 
-%h2 Posts
-- for post in @user.posts
-  %h3= link_to post.title, post
-  = image_tag post.image_url(:small) if post.image?
-  %p= post.description if post.description?
+.six.columns
+  %h2 Posts
+  - for post in @user.posts
+    %h3= link_to post.title, post
+    = image_tag post.image_url(:small) if post.image?
+    %p= post.description if post.description?
