--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,17 +4,13 @@
       = link_to 'Home', root_url
     - if user_signed_in?
       %li
-<<<<<<< Updated upstream
-        = link_to current_user.username, current_user
-=======
         = link_to 'New post', new_post_path
       %li
         = link_to "Find Friends", users_path
       %li
         = link_to 'View profile', current_user
->>>>>>> Stashed changes
       %li
-        = link_to 'Edit account', edit_user_registration_path
+        = link_to 'Edit profile', edit_user_registration_path
       %li
         = link_to 'Logout', destroy_user_session_path, :method=>'delete'
     - else
