--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,22 +4,25 @@
     %p
       Email: #{@user.email}
 
-  .row
-    %h2 Follows
-    %ul
-      - for following in @user.followings
-        %li
-          = h following.follower.username
-          = link_to "unfollow", following_path(:id => following.id), :method => :delete
+  - if @user.followings.length >= 1
+    .row
+      %h2 Follows
+      %ul
+        - for following in @user.followings
+          %li
+            = h following.follower.username
+            = link_to "unfollow", following_path(:id => following.id), :method => :delete
 
-    %h2 Follower
-    %ul
-      - for user in @user.followers
-        %li= h user.username
+  - if @user.followers.length >= 1
+    .row
+      %h2 Follower
+      %ul
+        - for user in @user.followers
+          %li= h user.username
 
-.eight.columns
-  %h2 Posts
-  -if @user.posts
+-if @user.posts.length >= 1
+  .eight.columns
+    %h2 Posts
     %ul.unstyled.posts
       - for post in @user.posts.order('created_at DESC')
         %li
