--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,6 +6,5 @@
 
 %p= @post.description
 
-= link_to 'Edit', edit_post_path(@post)
-
-= link_to 'Back', current_user
+-if current_user and current_user.id == @post.user_id
+  = link_to 'Edit', edit_post_path(@post)
