--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,8 +1,8 @@
 .row
   %ul.nav-bar
-    %li
-      = link_to 'Home', root_url
     - if user_signed_in?
+      %li
+        = link_to 'Timeline', root_url
       %li
         = link_to 'New post', new_post_path
       %li
@@ -14,6 +14,8 @@
       %li
         = link_to 'Logout', destroy_user_session_path, :method=>'delete'
     - else
+      %li
+        = link_to 'Home', root_url
       %li
         = link_to 'Login', new_user_session_path
       %li
