--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "options";
+
+ul.posts {
+  li {
+    border-bottom: 1px solid $grey;
+  }
+  li:last-child {
+    border-bottom: none;
+  }
+}
