--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -18,8 +18,8 @@
               %p= post.description if post.description?
     - else
       %p
-        You have no followers yet. Do you want to
-        = link_to 'find some', users_path
+        You don't follow anyone yet. Do you want to
+        = link_to 'find some people', users_path
         ?
 
 - else
