--- a/app/assets/stylesheets/options.scss
+++ b/app/assets/stylesheets/options.scss
@@ -1,5 +1,6 @@
 //--------------- Colors
 $yellow: #ffcc00;
-$black: #000000;
-$white: #ffffff;
+$black: #000;
+$white: #fff;
+$bright: #ddd;
 $grey: rgba(0,0,0,.3);
