--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,7 +1,10 @@
 %h3 Users
-%ul.users
-  - @users.each do |user|
-    %li
-      = link_to user.username, user
-      signed up #{user.created_at.to_date}
-      = link_to "Follow", followings_path(:follower_id => user), :method => :post
+- if @users.length >= 1
+  %ul.users.follow.unstyled
+    - @users.each do |user|
+      %li
+        = gravatar_image_tag(user.email, :gravatar => { :secure => true, :size => 23 })
+        = link_to user.username, user
+        = link_to "Follow", followings_path(:follower_id => user), :method => :post, :class => "button tiny radius"
+- else
+  %p There is no user here you don't follow yet. Invite your friends to get some more ;)
